--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/SprengerV/traderelayserver/issues"
   },
-  "homepage": "https://github.com/SprengerV/traderelayserver#readme"
+  "homepage": "https://github.com/SprengerV/traderelayserver#readme",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.20.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
