--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT=<PORT>
 NINJA_DIRECTORY="C:\Users\<user>\OneDrive\Documents\NinjaTrader 8\incoming\"
+NINJA_ACCOUNT="<NINJATRADER ACCOUNT NAME>"
+ATM_STRAT="<ATM STRATEGY NAME>"
