added environment variables

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=<PORT>
 NINJA_DIRECTORY="C:\Users\<user>\OneDrive\Documents\NinjaTrader 8\incoming\"
 NINJA_ACCOUNT="<NINJATRADER ACCOUNT NAME>"
 ATM_STRAT="<ATM STRATEGY NAME>"
+DELAY=<TRADE DELAY IN SECONDS>
+WINDOW=<RANDOMIZER WINDOW IN SECONDS>
