--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=<PORT>
-NINJA_DIRECTORY="C:\Users\<user>\OneDrive\Documents\NinjaTrader 8\incoming\"
+NINJA_DIRECTORY="C:\Users\<user>\Documents\NinjaTrader 8\incoming\"
 NINJA_ACCOUNT="<NINJATRADER ACCOUNT NAME>"
 DELAY=<TRADE DELAY IN SECONDS>
 WINDOW=<RANDOMIZER WINDOW IN SECONDS>
