--- a/config/state.json.example
+++ b/config/state.json.example
@@ -1,6 +1,8 @@
 {
   "account": {
-    "position_size": 0,
-    "active_atm": null
+    "ticker": {
+      "position_size": 0,
+      "active_atm": null
+    }  
   }
 }
