--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "fs": "^0.0.1-security",
+    "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "tty": "^1.0.1"
   }
