--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs": "^0.0.1-security",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
+    "say": "^0.16.0",
     "tty": "^1.0.1"
   }
 }
